Fix tooltip close button rendering on mobile. (Closes #11)

--- a/inc/css/shortcodes.css
+++ b/inc/css/shortcodes.css
@@ -33,19 +33,54 @@
 	pointer-events: none;
 }
 
-.abt_tooltip_touch_close:before {
+.abt_tooltip_touch_close-container {
+	width: 50px;
+	height: 50px;
 	position: absolute;
-	color: #f1f1f1;
-	content: '✖';
 	top: -10px;
-	text-align: center;
-	background: #555;
-	width: 24px;
-	height: 24px;
-	border-radius: 50px;
 	right: -10px;
-	font: 20px monospace;
+	text-align: right;
 }
+
+.abt_tooltip_touch_close {
+	position: relative;
+	border-radius: 50%;
+    width: 26px;
+    height: 26px;
+	box-sizing: border-box;
+	display: inline-block;
+	vertical-align: middle;
+	font-style: normal;
+	color: #f1f1f1;
+	background: #555;
+	text-indent: -9999px;
+	transform: rotate(45deg);
+}
+
+.abt_tooltip_touch_close:before {
+	width: 14px;
+	content: '';
+	pointer-events: none;
+	height: 2px;
+	box-shadow: inset 0 0 0 32px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.abt_tooltip_touch_close:after {
+	height: 14px;
+	content: '';
+	pointer-events: none;
+	width: 2px;
+	box-shadow: inset 0 0 0 32px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+
 
 
 .noselect {
